src/test/ui/issues/issue-34209.stderr
error[E0599]: no variant named `B` found for enum `S`
  --> $DIR/issue-34209.rs:7:12
   |
LL | enum S {
   | ------ variant `B` not found here
...
LL |         S::B {} => {},
   |            ^ help: did you mean `A`? (a similarly named variant)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
