src/test/ui/issues/issue-34209.rs
enum S {
    A,
}

fn bug(l: S) {
    match l {
        S::B{ } => { },
        //~^ ERROR ambiguous associated type
    }
}

fn main () {}
